--- a/index.html
+++ b/index.html
@@ -49,18 +49,12 @@
   <link rel="stylesheet" href="https://use.typekit.net/plu8ags.css">
   <link rel="stylesheet" href="https://use.typekit.net/uvs0zpe.css">
 
-  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
+  <link rel="stylesheet" href="css/styles.min.css">
 
-
-  <!-- https://clarin.com/redaccionfiler/clarin/desarrollo/2022/espectaculos/opera/aida/00/styles.min.css -->
 </head>
 
 <body>
-  <!-- 6Wp3w8uBf -->
 
-
-  <link rel="stylesheet"
-    href="https://clarin.com/redaccionfiler/clarin/desarrollo/2022/espectaculos/opera/aida/1.2/styles.min.css">
   <article class="landing">
     <!-- Hero -->
     <section class="hero" data-section="hero" style="overflow: hidden;">
