--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <body>
 
-  <article class="landing">
+  <article class="landing" id="landing">
     <!-- Hero -->
     <section class="hero" data-section="hero" style="overflow: hidden;">
 
